--- a/style.css
+++ b/style.css
@@ -158,7 +158,7 @@ img {
   font-family: inherit;
   font-size: 2.5rem;
   font-weight: bolder;
-  overflow-y: scroll ;
+  overflow-y: hidden;
 }
 
 .delete-btn {
